# TDNMPC

./: .gitignore  @plan.md  AGENTS.md  GEMINI.md  README.md  progress.md  pyproject.toml  主要实验.md  基座环境.md  基本实验.md
cfg/: B2_33_high_error.yaml  b2_33.yaml  demo.yaml  demo_multi.yaml  our_33.yaml  sanity_b1.yaml  smoke_test_b0.yaml  smoke_test_b1.yaml  smoke_test_b2.yaml  smoke_test_b3.yaml  smoke_test_our.yaml  ti24h_b3.yaml  ti24h_our.yaml
codex_tso_dso_nmpc.egg-info/: PKG-INFO  SOURCES.txt
config/: README.md  demo.yaml  smoke_test_b3.yaml  smoke_test_our.yaml  ti24h_b3.yaml  ti24h_our.yaml
configs/: default.yaml
data/: ieee33.json  ieee39.json  loads.csv  profiles.csv  pv.csv  scenarios.yaml  temp.csv
logs/demo/: metrics.csv
logs/smoke_test_our/: metrics.csv
runs/: load_profile_single.csv
runs/20250920T184311Z/: lin_check.json  sensitivity_eval.csv
runs/20250920T205750Z/: coupling.json
runs/baseline/: baseline_summary.json  dso_cigre_mv.metrics.json  tso_case118.metrics.json
runs/coupled/: coupled.metrics.json  coupled_net.json
runs/demo/: admm_history_all.csv  admm_history_step_3.csv  admm_history_step_4.csv  admm_history_step_5.csv  logs.csv  summary.json  summary.md
runs/demo_multi/: admm_history_step_7.csv  logs.csv  summary.json
runs/demo_multi_merge/: admm_history_all.csv  summary.md
runs/devices/: devices.metrics.json  devices_net.json
runs/ipopt_demo/: logs.csv  summary.json
runs/ipopt_demo_map/: admm_history_step_0.csv  logs.csv  summary.json
runs/lv_snaps/: INDEX.md  lv_off_end.error.txt  lv_off_peak_1.metrics.json  lv_off_peak_1440.metrics.json  lv_off_start.error.txt  lv_on_mid.error.txt  lv_on_peak_566.metrics.json  lv_snapshots.summary.json  report.csv  report.json
runs/multi_ipopt/: logs.csv  metrics.json
runs/multi_ipopt_h/: admm_history_step_6.csv  logs.csv  summary.json
runs/our_33/: admm_history_step_21.csv  logs.csv  summary.json  summary.md
runs/sanity_b1/: metrics.json
runs/sanity_b1_merge_test/: logs.csv  summary.json  (+1 more)
scripts/: __init__.py  aggregate_kpis.py  build_coupled_system.py  build_dso.py  build_envelope.py  build_tso.py  demo_coupling.py  evaluate_run.py  exp_baseline.py  exp_coupling.py  exp_devices.py  exp_lv_snapshots.py  exp_robust_sweep.py  exp_timeseries_local.py  exp_tinmpc.py  make_profiles.py  make_run_index.py  plot_closed_loop.py  plot_results.py  run_admm.py  run_closed_loop.py  run_experiment.py  setup_base_networks.py  ti_envelope_from_history.py  tune_shrink.py
src/: __init__.py  profiles.py
tests/: test_admm.py  test_base_networks.py  test_batch.py  test_closed_loop_tracking.py  test_coupling.py  test_envelope.py  test_forecast.py  test_interface_adapter.py  test_lindistflow.py  test_lv_feeder_and_envelope.py  test_metrics.py  test_nmpc.py  test_plots.py  test_profiles.py  test_pyomo_dso.py  test_pyomo_tso.py  test_sim_runner.py  test_ti_env.py  test_timewin.py  test_tso_dc.py  test_tune_shrink.py
归档/: summary.md  报告.md  报告2.md  调试步骤.md
(+92 files in other folders)
